# Finite-field-arithmetic

./: .gitignore  CMakeLists.txt  Makefile  README.md  arith.c  arith.h  arith_tests.c  bench.c  bench.h  go.sh  parameters.h  tests.c
.github/workflows/: ci.yml
benchmarks/: bench.c
include/: arith.h
p128/arm64/: arith_arm128.S  arith_arm128.c
p128/generic/: arith_generic.c
p128_0/: prime_params.c
p128_0/arm64/: arith_arm128.S  arith_arm128.c
p128_0/generic/: arith_generic.c
p128_1/: prime_params.c
p128_1/arm64/: arith_arm128.c
p128_1/generic/: arith_generic.c
p192/arm64/: arith_arm192.S  arith_arm192.c
p192/generic/: arith_generic.c
p192_0/arm64/: arith_arm192.S  arith_arm192.c
p192_0/generic/: arith_generic.c
p192_1/: prime_params.c
p192_1/arm64/: arith_arm192.c
p192_1/generic/: arith_generic.c
p256/arm64/: arith_arm256.S  arith_arm256.c
p256/generic/: arith_generic.c
p256_0/: prime_params.c
p256_0/arm64/: arith_arm256.c
p256_0/generic/: arith_generic.c
p256_1/: prime_params.c
p256_1/arm64/: arith_arm256.c
p256_1/generic/: arith_generic.c
p512/arm64/: arith_arm512.S  arith_arm512.c
p512/generic/: arith_generic.c
p512_0/: prime_params.c
p512_0/arm64/: arith_arm512.c
p512_0/generic/: arith_generic.c
p512_1/: prime_params.c
p512_1/arm64/: arith_arm512.c
p512_1/generic/: arith_generic.c
p64/arm64/: arith_arm64.S  arith_arm64.c
p64/generic/: arith_generic.c
p64_0/: prime_params.c
p64_0/arm64/: arith_arm64.c
p64_0/generic/: arith_generic.c
p64_1/arm64/: arith_arm64.c
p64_1/generic/: arith_generic.c
random/: random.c
src/: arith.c
src/primes/p128_0/: prime_params.c
src/primes/p128_0/arm64/: arith_arm128.c
src/primes/p128_0/generic/: arith_generic.c
src/primes/p128_1/arm64/: arith_arm128.S  arith_arm128.c
src/primes/p128_1/generic/: arith_generic.c
src/primes/p192_0/: prime_params.c
src/primes/p192_0/arm64/: arith_arm192.c
src/primes/p192_0/generic/: arith_generic.c
src/primes/p192_1/: prime_params.c
src/primes/p192_1/arm64/: arith_arm192.S  arith_arm192.c
src/primes/p192_1/generic/: arith_generic.c
src/primes/p256_0/: prime_params.c
src/primes/p256_0/arm64/: arith_arm256.S  arith_arm256.c
src/primes/p256_0/generic/: arith_generic.c
src/primes/p256_1/: prime_params.c
src/primes/p256_1/arm64/: arith_arm256.S  arith_arm256.c
src/primes/p256_1/generic/: arith_generic.c
src/primes/p512_0/: prime_params.c
src/primes/p512_0/arm64/: arith_arm512.S  arith_arm512.c
src/primes/p512_0/generic/: arith_generic.c
src/primes/p512_1/: prime_params.c
src/primes/p512_1/arm64/: arith_arm512.S  arith_arm512.c
src/primes/p512_1/generic/: arith_generic.c
src/primes/p64_0/: prime_params.c
src/primes/p64_0/arm64/: arith_arm64.S  arith_arm64.c
src/primes/p64_0/generic/: arith_generic.c
src/primes/p64_1/: prime_params.c
src/primes/p64_1/arm64/: arith_arm64.S  arith_arm64.c
src/primes/p64_1/generic/: arith_generic.c
src/random/: random.c
tests/: tests.c
